<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grigio"
    android:paddingLeft="10dp"
    tools:context="it.unisa.personaltrainer.RegistrationActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/reg"
        android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
        android:textColor="@color/rosso"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="40dp"
        android:text="@string/eta"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="44dp"
        android:text="@string/nome_utente"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textColorLink="@color/rosso"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:lines="@color/rosso"
        android:paddingRight="10dp"
        android:textColorLink="@color/rosso"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:inputType="number"
        android:textColorLink="@color/rosso"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_marginTop="40dp"
        android:layout_toLeftOf="@+id/editText4"
        android:text="@string/polso"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignRight="@+id/editText4"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_centerVertical="true"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="41dp"
        android:text="@string/altezza"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText1"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/button1"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:inputType="number"
        android:textStyle="italic" >
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_centerVertical="true"
        android:text="@string/peso"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_alignLeft="@+id/editText1"
        android:layout_marginBottom="22dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/apptheme_btn_radio_holo_light"
            android:checked="true"
            android:text="@string/maschio"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/apptheme_btn_radio_holo_light"
            android:text="@string/femmina"
            android:textColor="@color/black"
            android:textStyle="italic" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignTop="@+id/radioGroup3"
        android:text="@string/sesso"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignTop="@+id/textView8"
        android:layout_toRightOf="@+id/button1"
        android:background="@drawable/selector_slim_spinner"
        android:listSelector="@drawable/btn_red_color"
        android:gravity="top" 
        />

    <Button
        android:id="@+id/button1"
        style="@style/btnStyleOrange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/avanti"
        android:textColor="@color/grigio"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/editText5"
        android:layout_marginTop="19dp"
        android:text="@string/prep"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textStyle="italic" />

</RelativeLayout>